# ENG5220-VibePulse

./: .gitignore  CMakeLists.txt  README.md  Sensor.h (Header File)  license  vibepulse
assets/music/BPM120-180/: BPM120.m4a  BPM125.m4a  BPM130.m4a  BPM135.m4a  BPM140.m4a  BPM145.m4a  BPM150.m4a  BPM155.m4a  BPM160.m4a  BPM165.m4a  BPM170.m4a  BPM175.m4a  BPM180.m4a
docs/: CODE_ARCHITECTURE.md  VibePulse_PRD.md
include/: HeartRateCalculator.h  I2C.h  MusicPlayer.h  SDL2AudioBackend.h  Sensor.h  VibePulse.h  ZoneMusicPlayer.h  dsp.h  sensor.h  vibepulse_develop_audit.html
src/: HeartRateCalculator.cpp  MusicPlayer.cpp  Sensor.cpp  ZoneMusicPlayer.cpp  dsp.cpp  main.cpp  test_MusicPlayer.cpp
tests/: CMakeLists.txt  main.cpp  simulated_MAX30102_data.csv  test_music_player.cpp
